--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ matrix:
 
 go_import_path: github.com/coreos/mantle
 
+install:
+  # './build' uses 'git describe' which needs tags
+  - git fetch --unshallow --tags
+
 script:
   - ./build
   - ./test
